# df-log-rs

./: .gitignore  Cargo.toml  README.md  settings.json
scripts/: gen_settings.py
src/: app.rs  event.rs  gamelog.rs  highlighter.rs  main.rs  settings.rs
