[package]
name = "df-log-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify = "4.0.17"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.67"
regex = "1.5.4"
eframe = { git = "https://github.com/emilk/egui" }
codepage-strings = "1.0.1"
